# doc-eval

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  EVALUATION_SYSTEM.md  README.md  doc-conversion-eval-tools-research.md  example_eval.py  pyproject.toml
eval/: __init__.py  report.py
eval/adapters/: parsebench.py
eval/core/: config.py  models.py  process_pool.py  registry.py  runner.py
eval/layers/: l1_format.py  l4_semantic.py
eval/metrics/: normalize.py
newbench/: filter_jsonl.py  layout.jsonl  table.jsonl  text_formatting.jsonl
server/: app.py  registry_holder.py  routes_dataset.py  routes_eval.py  routes_leaderboard.py
server/static/: index.html
tests/: test_batch_eval.py  test_config.py  test_l1_format.py  test_leaderboard.py  test_parsebench_adapter.py  test_process_pool.py  test_registry.py  test_routes_eval.py  test_runner.py
tianti/: result_Docling.json  result_LlamaParse(云端）.json  result_PyMuPDF.json  result_markitdown.json  result_mineru-VLM.json  result_mineru-pipline.json
